# MAGDA

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  VISION.md  create_issues.sh  magda_config.txt  magica_config.txt  project_structure.md  setup.sh  test_llm.cpp  test_llm_native.cpp
.claude/: settings.local.json
.claude/skills/tracktion-engine/: SKILL.md
.github/workflows/: ci.yml
assets/: absrel  logo_blue_gray  mods
daw/: CMakeLists.txt  magica.cpp  magica_daw_main.cpp
daw/core/: Config.cpp  Config.hpp
daw/ui/components/: SvgButton.cpp  SvgButton.hpp  TimelineComponent.cpp  TimelineComponent.hpp  TrackContentPanel.cpp  TrackContentPanel.hpp  TrackHeadersPanel.cpp  TrackHeadersPanel.hpp  ZoomManager.cpp  ZoomManager.hpp
daw/ui/components/timeline/: TimelineComponent.cpp  TimelineComponent.hpp
daw/ui/components/tracks/: TrackContentPanel.cpp  TrackContentPanel.hpp
daw/ui/dialogs/: PreferencesDialog.cpp  PreferencesDialog.hpp
daw/ui/layout/: LayoutConfig.hpp
daw/ui/panels/: FooterBar.cpp  FooterBar.hpp  TransportPanel.cpp  TransportPanel.hpp
daw/ui/views/: MainView.cpp  MainView.hpp  MixerView.cpp  MixerView.hpp  SessionView.cpp  SessionView.hpp
daw/ui/windows/: MainWindow.cpp  MainWindow.hpp  MenuManager.cpp
docs/: ci-setup.md  code_style.md  dual_mode_system.md  glossary.md  local_llm_poc_summary.md  test-plan.md
docs/architecture/: component-management-guide.md  expandable-central-panel.md
docs/specs/: customizable-footer-tabs.md  mixing-engine-plan.md  track-model-architecture.md
magda/agents/: CMakeLists.txt  agent_interface.hpp  agent_manager.hpp  simple_agent.hpp
magda/daw/: CMakeLists.txt  magda.cpp  magda.hpp  magda_daw_main.cpp
magda/daw/audio/: AudioBridge.cpp  AudioBridge.hpp  AudioEngineOptimizer.cpp  AudioEngineOptimizer.hpp  DeviceProcessor.cpp  DeviceProcessor.hpp  MidiBridge.cpp  MidiBridge.hpp
magda/daw/core/: AutomationInfo.hpp  AutomationManager.cpp  AutomationManager.hpp  ClipCommands.cpp  ClipCommands.hpp  ClipInfo.hpp  ClipManager.cpp  ClipManager.hpp  ClipOperations.hpp  ClipTypes.hpp  Config.cpp  Config.hpp  DeviceInfo.hpp  MidiTypes.hpp  ModInfo.hpp  ModulatorEngine.cpp  ModulatorEngine.hpp  ParameterInfo.hpp  RackInfo.hpp  SelectionManager.cpp  SelectionManager.hpp  TrackCommands.cpp  TrackCommands.hpp  TrackInfo.hpp  TrackManager.cpp  TrackManager.hpp  TrackTypes.hpp  TrackViewSettings.hpp  UndoManager.cpp  UndoManager.hpp  ViewModeController.cpp  ViewModeController.hpp  ViewModeEvents.hpp  ViewModeState.hpp
magda/daw/engine/: AudioEngine.hpp  MagdaUIBehaviour.cpp  MagdaUIBehaviour.hpp  PlaybackPositionTimer.cpp  PlaybackPositionTimer.hpp  PluginWindowManager.cpp  TracktionEngineWrapper.cpp  TracktionEngineWrapper.hpp  daw_mode_interface_impl.hpp
magda/daw/interfaces/: clip_interface.hpp
magda/daw/profiling/: BenchmarkSuite.hpp  INTEGRATION_GUIDE.md  PerformanceProfiler.hpp  README.md
magda/daw/ui/debug/: DebugDialog.cpp  DebugDialog.hpp  DebugSettings.hpp
magda/daw/ui/dialogs/: AudioSettingsDialog.cpp  AudioSettingsDialog.hpp  ChainTreeDialog.cpp  PreferencesDialog.cpp  PreferencesDialog.hpp  (+2 more)
magica/daw/: CMakeLists.txt  magica.cpp  magica_daw_main.cpp
magica/daw/core/: ClipCommands.cpp  ClipCommands.hpp  ClipManager.cpp  ClipManager.hpp  TrackInfo.hpp  TrackManager.cpp  TrackManager.hpp  TrackTypes.hpp  TrackViewSettings.hpp  UndoManager.cpp  UndoManager.hpp
magica/daw/engine/: AudioEngine.hpp  PlaybackPositionTimer.cpp  PlaybackPositionTimer.hpp  TracktionEngineWrapper.cpp  TracktionEngineWrapper.hpp
tests/: CMakeLists.txt  test_audio_clip_stretch.cpp  test_command.cpp  test_interfaces.cpp  test_zoom_simple.cpp
(+204 files in other folders)
